# kanban__site_by_eddonner

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile
.claude/: settings.local.json
backend/: manual-ai-test.db  pyproject.toml
backend/app/: ai.py  ai_board.py  board.py  db.py  main.py
backend/static/: index.html
backend/tests/: test_ai_api.py  test_ai_board.py  test_auth.py  test_board_api.py
docs/: AI.md  DATABASE.md  PLAN.md  UI_review.md  board.schema.json  code_review.md
frontend/: AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: kanban.spec.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx
frontend/src/lib/: kanban.test.ts  kanban.ts
scripts/: start-server.command  start-server.ps1  start-server.sh  stop-server.command  stop-server.ps1  stop-server.sh
